spring-boot-app/bin/target/classes/META-INF/fabric8/openshift/my-app-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: my-app
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.example
  name: my-app
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: my-app
